<resources>
    <string name="app_name">MyCalculator</string>
    <string name="button">Button</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="eq">=</string>
    <string name="d1">1</string>
    <string name="d2">2</string>
    <string name="d3">3</string>
    <string name="d4">4</string>
    <string name="d5">5</string>
    <string name="d6">6</string>
    <string name="d7">7</string>
    <string name="d8">8</string>
    <string name="d9">9</string>
    <string name="d0">0</string>
    <string name="textColor">#FFFFFF</string>


</resources>