<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:rotation="90"
        android:scaleX="2.5"
        android:scaleY="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="600px"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button28"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"
                    tools:ignore="MissingConstraints"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="88dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="503dp" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"
                 />

                <Button
                    android:id="@+id/button25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/div"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"
                    />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/d8"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"
                    />

                <Button
                    android:id="@+id/button23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/d9"
                    android:textColor="@color/white"
                    android:background="@color/purple_200" />

                <Button
                    android:id="@+id/button29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/d7"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/d4"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>

                <Button
                    android:id="@+id/button32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/d6"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>

                <Button
                    android:id="@+id/button33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/d5"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/d1"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>

                <Button
                    android:id="@+id/button27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/d3"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>

                <Button
                    android:id="@+id/button24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/d2"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/d0"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>

                <Button
                    android:id="@+id/button35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/mul"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>

                <Button
                    android:id="@+id/button36"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/eq"
                    android:textColor="@color/white"
                    android:background="@color/purple_200"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>