<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        android:scaleX="2.5"
        android:scaleY="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layoutHeight"
        app:layout_constraintBottom_toBottomOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="1dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonBracket_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="("
                    style="@style/ButtonStyle"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonBracket_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=")"
                    tools:ignore="MissingConstraints"
                    style="@style/ButtonStyle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Del"
                tools:ignore="MissingConstraints"
                style="@style/ButtonStyle"/>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/minus"
                    tools:ignore="MissingConstraints"
                    style="@style/ButtonStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    style="@style/ButtonStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSplit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/div"
                    style="@style/ButtonStyle"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d8"
                    style="@style/ButtonStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d9"
                    style="@style/ButtonStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d7"
                    style="@style/ButtonStyle"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d4"
                    style="@style/ButtonStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d6"
                    style="@style/ButtonStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d5"
                    style="@style/ButtonStyle"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d1"
                    style="@style/ButtonStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d3"
                    style="@style/ButtonStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d2"
                    style="@style/ButtonStyle"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d0"
                    style="@style/ButtonStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonMul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mul"
                    style="@style/ButtonStyle"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonEq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eq"
                    style="@style/ButtonStyle"/>
            </LinearLayout>
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>